Fix Alignment
Correct the box model alignment in the
/Banana-Bread.css/ page.

--- a/recipes/banana-bread.css
+++ b/recipes/banana-bread.css
@@ -53,12 +53,12 @@ img {
 
 .two{
     margin-right: 130px;
-    margin-top: -335px;
+    margin-top: -320px;
 }
 
 .three {
     margin-right: -1005px;
-    margin-top: -330px;
+    margin-top: -320px;
 }
 
 .back {
